[gd_scene load_steps=4 format=3 uid="uid://bk7jucdgcataw"]

[ext_resource type="Script" path="res://scenes/ui/HUD.gd" id="1_say4t"]
[ext_resource type="FontFile" uid="uid://0ui3h63uhb7c" path="res://textures/fonts/Karma Suture.otf" id="2_locit"]
[ext_resource type="PackedScene" uid="uid://4scdp5b8orw1" path="res://scenes/ui/AssetMenu.tscn" id="3_txgrn"]

[node name="HUD" type="CanvasLayer"]
script = ExtResource("1_say4t")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 36.0
grow_horizontal = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 100

[node name="MainBar" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/separation = 50

[node name="MoneyLabel" type="Label" parent="MarginContainer/VBoxContainer/MainBar"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_locit")
theme_override_font_sizes/font_size = 40
text = "Money"

[node name="OwnedLandLabel" type="Label" parent="MarginContainer/VBoxContainer/MainBar"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_locit")
theme_override_font_sizes/font_size = 40
text = "Owned Land"

[node name="SelectedMenu" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2
size_flags_horizontal = 0

[node name="SelectedMenuContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer/SelectedMenu"]
layout_direction = 2
layout_mode = 2
size_flags_horizontal = 0

[node name="SelectedLabel" type="Label" parent="MarginContainer/VBoxContainer/SelectedMenu/SelectedMenuContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_locit")
theme_override_font_sizes/font_size = 40
text = "Selected: "

[node name="PriceLabel" type="Label" parent="MarginContainer/VBoxContainer/SelectedMenu/SelectedMenuContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_locit")
theme_override_font_sizes/font_size = 40
text = "Price:"

[node name="AssetsContainer" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="WoodLabel" type="Label" parent="MarginContainer/VBoxContainer/AssetsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_fonts/font = ExtResource("2_locit")
theme_override_font_sizes/font_size = 40
text = "1: Wood: 0"

[node name="BuildingMenu" type="MarginContainer" parent="."]
unique_name_in_owner = true
visible = false
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -40.0
offset_right = 40.0
grow_vertical = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_bottom = 20

[node name="HBoxContainer" type="HBoxContainer" parent="BuildingMenu"]
layout_mode = 2
theme_override_constants/separation = 30

[node name="Land" type="Label" parent="BuildingMenu/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_locit")
theme_override_font_sizes/font_size = 40
text = "1: Land"

[node name="TreeFarm" type="Label" parent="BuildingMenu/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_locit")
theme_override_font_sizes/font_size = 40
text = "2: Tree Farm"

[node name="AssetMenu" parent="." instance=ExtResource("3_txgrn")]
unique_name_in_owner = true
visible = false

[connection signal="asset_menu_selected" from="." to="AssetMenu" method="_on_hud_asset_menu_selected"]
[connection signal="has_been_sold" from="AssetMenu" to="." method="_on_asset_menu_has_been_sold"]
[connection signal="has_canceled" from="AssetMenu" to="." method="_on_asset_menu_has_canceled"]
